build: update release profile settings in Cargo.toml to use fat LTO and abort on panic

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -20,6 +20,7 @@ utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
 
 [profile.release]
 opt-level = 3
-lto = true
+lto = "fat"
 codegen-units = 1
+panic = "abort"
 strip = true
