--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,6 +10,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends libssl3 ca-cert
     && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /app/target/release/geopop-api /usr/local/bin/geopop-api
 EXPOSE 8080
-HEALTHCHECK --interval=10s --timeout=3s CMD curl -f http://localhost:8080/health || exit 1
+HEALTHCHECK --interval=10s --timeout=3s CMD curl -f http://localhost:8080/api/v1/health || exit 1
 RUN apt-get update && apt-get install -y --no-install-recommends curl && rm -rf /var/lib/apt/lists/*
 CMD ["geopop-api"]
