--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,6 +9,8 @@ actix-web = "4"
 actix-cors = "0.7"
 deadpool-postgres = "0.14"
 tokio-postgres = "0.7"
+native-tls = "0.2"
+postgres-native-tls = "0.5"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
