--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,16 @@
 services:
-  db:
-    build:
-      context: ./docker
-      dockerfile: Dockerfile.db
-    container_name: geopop-db
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-geopop}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-geopop}
-      POSTGRES_DB: ${POSTGRES_DB:-geopop}
-    ports:
-      - "${DB_PORT:-5432}:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    shm_size: "256mb"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-geopop}"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-    restart: unless-stopped
-
   api:
     build:
       context: ./api
       dockerfile: Dockerfile
     container_name: geopop-api
     environment:
-      DATABASE_URL: postgres://${POSTGRES_USER:-geopop}:${POSTGRES_PASSWORD:-geopop}@db:5432/${POSTGRES_DB:-geopop}
+      DATABASE_URL: ${DATABASE_URL:-postgres://postgres:lialh4h2o@host.docker.internal:5432/geo_pop_db}
       API_HOST: 0.0.0.0
       API_PORT: "8080"
-      POOL_SIZE: ${POOL_SIZE:-16}
+      POOL_SIZE: ${POOL_SIZE:-32}
     ports:
       - "${API_PORT:-8080}:8080"
-    depends_on:
-      db:
-        condition: service_healthy
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: unless-stopped
-
-volumes:
-  pgdata:
